Fix spacing of logo on mobile

--- a/docs/_sass/_logo-banner.scss
+++ b/docs/_sass/_logo-banner.scss
@@ -1,14 +1,3 @@
-
-/* These _are not_ shared by the game and docs. */
-#logo-banner {
-  margin-top: 0;
-  margin-bottom: 1.6rem;
-}
-#logo-banner .logo {
-  height: 6.8rem;
-  padding: 0 0.5rem 0 0;
-}
-
 /* These _are_ shared by the game and docs. */
 #logo-banner {
   display: inline-block;
@@ -17,20 +6,17 @@
   height: auto;
   font-family: 'Roboto', 'Noto Sans', 'Helvetica', 'Arial', sans-serif;
 }
-#logo-banner .logo {
-  display: inline-block;
-  vertical-align: middle;
-}
-#logo-banner {
-  display: inline-block;
-  text-align: center;
-  width: 100%;
-  height: auto;
-  font-family: 'Roboto', 'Noto Sans', 'Helvetica', 'Arial', sans-serif;
+#logo-banner .logo,
+#logo-banner .titles {
+  margin-bottom: 1.6em;
+  margin-left: 0.1em;
+  margin-right: 0.1em;
 }
 #logo-banner .logo {
   display: inline-block;
   vertical-align: middle;
+  height: 6.8rem;
+  padding: 0 0.5rem 0 0;
 }
 #logo-banner .logo img {
   display: inline-block;
@@ -83,6 +69,9 @@
   }
 }
 @media (max-width: 36rem) {
+  #logo-banner .logo {
+    display: none;
+  }
   #logo-banner .titles h1 {
     font-size: 2.3rem;
     margin-bottom: 0.3em;
